# nib

./: README.md  bob  bob.c  bobthebuilder.h  build  build.c
development/src/: CMakeCache.txt  CMakeLists.txt  Makefile  buffer.c  cmake_install.cmake  compile_commands.json  display.c  glad.c  lsan.supp  nib.h  painter  painter.c
development/src/.ccls-cache/@@home@geronimo@dev@nib@development@src/: @home@geronimo@dev@nib@development@include@KHR@khrplatform.h.blob  @home@geronimo@dev@nib@development@include@glad@glad.h.blob  @usr@include@GLFW@glfw3.h.blob  @usr@include@alloca.h.blob  @usr@include@assert.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@dlfcn.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@local_lim.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  (+93 more)
open_gl_wrapper/src/: CMakeCache.txt  CMakeLists.txt  Makefile  buffer.c  cmake_install.cmake  compile_commands.json  display.c  paint_bg.c  painter  painter.c
(+400 files in other folders)
